@@ -10,9 +10,9 @@ struct B
 {
   A a1 = 1;			// { dg-error "" }
   A a2 { 2 };
-  A a3 = { 3 };			// { dg-error "" }
+  A a3 = { 3 };			// { dg-error "explicit" }
 };
 
 constexpr B b;			// { dg-error "B::B" }
 
-// { dg-message "a1. is invalid" "" { target *-*-* } 11 }
+// { dg-prune-output "uninitialized member" }
